fix: restore next CI and reconcile integration regressions
Restore native object and module lifecycle behavior, fix additive-zone music and portable sample decoding, align stale fixtures with their production owners, and load manual trace validation tooling from its workflow revision.

Changelog: n/a: repairs unreleased 0.7 behavior without adding a release theme; detailed validation follows in the task evidence
Guide: n/a: existing runtime and ROM configuration contracts remain in force
Known-Discrepancies: n/a: no listed discrepancy is closed
S3K-Known-Discrepancies: n/a: campaign route blockers remain recorded
Agent-Docs: n/a: no agent instructions changed
Configuration-Docs: n/a: no new runtime configuration
Skills: n/a: no skill changes