@@ -6,10 +6,13 @@ import org.junit.jupiter.api.Test;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.List;
+import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 class TestFbzVisualEvidenceToolingContract {
 
@@ -27,7 +30,7 @@ class TestFbzVisualEvidenceToolingContract {
     }
 
     @Test
-    void emulatorAndValidatorSourcesContainFailClosedVisibilityAndSupersessionGates()
+    void emulatorExportsVisibilityAndNaturalCadenceEvidence()
             throws Exception {
         String lua = Files.readString(Path.of("tools/bizhawk/capture_fbz_visual_references.lua"));
         for (String token : new String[]{
@@ -37,41 +40,43 @@ class TestFbzVisualEvidenceToolingContract {
             assertTrue(lua.contains(token), "missing BizHawk evidence token: " + token);
         }
 
-        String validator = Files.readString(Path.of(
-                "tools/validation/Validate-FbzVisualCheckpoints.ps1"));
-        for (String token : new String[]{
-                "SUPERSEDED", "superseded_exact_start", "superseded_aniplc_series",
-                "gameplay-v2", "-v2", "Get-FileHash", "natural_expiry_observed",
-                "timer_before", "frame_before", "frame_after", "bk2_frame",
-                "not consecutive"}) {
-            assertTrue(validator.contains(token), "missing validator policy token: " + token);
-        }
-
-        String hostFinalizer = Files.readString(Path.of(
-                "tools/validation/Capture-FbzBizHawkReferences.ps1"));
-        for (String token : new String[]{
-                "export-summary-v2.json", "fbz1-start-outdoor-gameplay-v2",
-                "aniplc-cadence-200-v2", "crop_sha256", "Get-FileHash"}) {
-            assertTrue(hostFinalizer.contains(token),
-                    "missing v2 host-finalizer token: " + token);
-        }
     }
 
     @Test
-    void validatorExcludesHistoricalSupersededSeriesFromActiveFailureAccounting()
+    void repositoryAmendmentCannotPublishUnreviewedVisibleFrameOrCadenceEvidence()
             throws Exception {
-        String validator = Files.readString(Path.of(
-                "tools/validation/Validate-FbzVisualCheckpoints.ps1"));
-        String supersededBlock = between(validator,
-                "$supersededAniPlc =",
-                "foreach ($name in $activeAniPlcSeries)");
+        // The historical PowerShell validator/finalizer were local tools and
+        // were never tracked. Exercise the actual capture acceptance owner,
+        // which must reject the committed pending replacement evidence.
+        Path source = Path.of(
+                "docs/architecture/research/s3k-zones/fbz-visual-evidence-amendment-proposal.json");
+        FbzVisualEvidenceAmendment amendment = FbzVisualEvidenceAmendment.load(source,
+                FbzVisualPrebootVerifier.sha256(Files.readAllBytes(source)));
 
-        assertFalse(supersededBlock.contains("$failCount++"),
-                "historical SUPERSEDED rows are inventory evidence, not active failures");
-        assertTrue(validator.contains("$expectedActiveGroupCount = 32"),
-                "validator must pin the reviewed active-group count");
-        assertTrue(validator.contains("Active FBZ visual evidence group count drifted"),
-                "validator must fail closed if the active-group inventory changes");
+        assertEquals("awaiting-fresh-independent-review",
+                amendment.provenance().get("accepted_first_visible_frame_status"));
+        assertTrue(assertThrows(IllegalStateException.class,
+                amendment::acceptedLevelFrameCounter).getMessage()
+                .contains("not independently approved"));
+        assertTrue(assertThrows(IllegalStateException.class,
+                () -> amendment.verifyAcceptedVisibleFrame(Map.of())).getMessage()
+                .contains("not independently approved"));
+
+        List<String> checkpoints = List.of("fbz1-aniplc-200", "fbz1-aniplc-208",
+                "fbz1-aniplc-210", "fbz1-aniplc-230", "fbz1-aniplc-238");
+        JsonNode series = new ObjectMapper().readTree(source.toFile())
+                .path("proposed_aniplc_replacements").path("series");
+        assertEquals(checkpoints.size(), series.size());
+        for (int index = 0; index < checkpoints.size(); index++) {
+            String checkpoint = checkpoints.get(index);
+            assertEquals(checkpoint, series.get(index).path("checkpoint").asText());
+            assertTrue(series.get(index).path("series").asText().endsWith("-v2"));
+            assertTrue(assertThrows(IllegalStateException.class,
+                    () -> amendment.requireApprovedCadenceSeries(checkpoint)).getMessage()
+                    .contains("not independently approved"));
+            assertThrows(IllegalStateException.class,
+                    () -> amendment.cadenceSeriesName(checkpoint));
+        }
     }
 
     @Test
@@ -89,11 +94,4 @@ class TestFbzVisualEvidenceToolingContract {
         assertFalse(source.contains("SonicConfigurationService.getInstance()"));
     }
 
-    private static String between(String source, String start, String end) {
-        int startIndex = source.indexOf(start);
-        int endIndex = source.indexOf(end, startIndex);
-        assertTrue(startIndex >= 0, "missing start marker: " + start);
-        assertTrue(endIndex > startIndex, "missing end marker: " + end);
-        return source.substring(startIndex, endIndex);
-    }
 }
